image path change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 
@@ -13,7 +13,7 @@
     <div class="home-top" id='home'>
         <nav>
 
-            <img src="../Home/rocket-img.png" alt="">
+            <img src="./images/Home/rocket-img.png" alt="">
             <ul class="right">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
@@ -31,17 +31,17 @@
                 <button id="get-started">Get Started</button>
             </div>
 
-            <img src="../Home/img.png" alt="">
+            <img src="./images/Home/img.png" alt="">
         </div>
 
-        <img id="wave-1" src="../Waves/wave-1.png" alt="">
+        <img id="wave-1" src="./images/Waves/wave-1.png" alt="">
     </div>
 
 
     <!-- about -->
     <div class="about">
         <div class="about-1" id="about">
-            <img src="../About/zbc-logo.png" alt="">
+            <img src="./images/About/zbc-logo.png" alt="">
             <div class="about-zbc">
                 <h1>About ZBC</h1>
                 <br>
@@ -72,9 +72,9 @@
 
     <!-- ourwork -->
     <div class='ourwork' id="work">
-        <img id="ourbgimg" src="../Waves/wave-2.png" alt="">
+        <img id="ourbgimg" src="./images/Waves/wave-2.png" alt="">
         <nav class="ourwork-nav">
-            <img id="ourimg" src="../Home/rocket-img.png" alt="">
+            <img id="ourimg" src="./images/Home/rocket-img.png" alt="">
             <div class="ourwork-heading">
                 <h1 style="color: white;">Our Work</h1>
                 <br>
@@ -99,18 +99,18 @@
         <div class="moon-launch">
 
             <div class="space-even size-img" style="top: 50px;">
-                <img src="../Moon Launch/Polygon 2.png" alt="">
+                <img src="./images/Moon Launch/Polygon 2.png" alt="">
             </div>
 
             <div class="space-even size-img">
-                <img src="../Moon Launch/Polygon 3.png" alt="">
-                <img src="../Moon Launch/Polygon 4.png" alt="">
+                <img src="./images/Moon Launch/Polygon 3.png" alt="">
+                <img src="./images/Moon Launch/Polygon 4.png" alt="">
             </div>
 
             <div class="space-even size-img" style="bottom: 50px;">
-                <img src="../Moon Launch/Polygon 1.png" alt="">
-                <img src="../Moon Launch/Polygon 5.png" alt="">
-                <img src="../Moon Launch/Polygon 6.png" alt="">
+                <img src="./images/Moon Launch/Polygon 1.png" alt="">
+                <img src="./images/Moon Launch/Polygon 5.png" alt="">
+                <img src="./images/Moon Launch/Polygon 6.png" alt="">
 
             </div>
         </div>
@@ -118,9 +118,9 @@
 
         <h1 class="space-even">Our Orbiters</h1>
         <div class="orbiters">
-            <img class="size-img" src="../Orbiters/img-1.png" alt="">
-            <img class="size-img" src="../Orbiters/img-2.png" alt="">
-            <img class="size-img" src="../Orbiters/img-3.png" alt="">
+            <img class="size-img" src="./images/Orbiters/img-1.png" alt="">
+            <img class="size-img" src="./images/Orbiters/img-2.png" alt="">
+            <img class="size-img" src="./images/Orbiters/img-3.png" alt="">
 
         </div>
 
@@ -131,9 +131,9 @@
 
     <!-- our-events -->
     <div class="our-events" id="events">
-        <img id="oureveimg" src="../Waves/wave-2.png" alt="">
+        <img id="oureveimg" src="./images/Waves/wave-2.png" alt="">
         <nav class="ourwork-nav">
-            <img id="ourimg" src="../Home/rocket-img.png" alt="">
+            <img id="ourimg" src="./images/Home/rocket-img.png" alt="">
             <div class="ourwork-heading">
                 <h1 style="color: white;">Our Events</h1>
                 <br>
@@ -143,22 +143,22 @@
 
         <div class="eve-cards">
             <div class="card">
-                <img class="card-img" src="../Events/img-1.png" alt="">
+                <img class="card-img" src="./images/Events/img-1.png" alt="">
                 <button id="card-button">View More</button>
             </div>
 
             <div class="card">
-                <img class="card-img" src="../Events/img-2.png" alt="">
+                <img class="card-img" src="./images/Events/img-2.png" alt="">
                 <button id="card-button">View More</button>
             </div>
 
             <div class="card">
-                <img class="card-img" src="../Events/img-3.png" alt="">
+                <img class="card-img" src="./images/Events/img-3.png" alt="">
                 <button id="card-button">View More</button>
             </div>
 
             <div class="card">
-                <img class="card-img" src="../Events/img-4.png" alt="">
+                <img class="card-img" src="./images/Events/img-4.png" alt="">
                 <button id="card-button">View More</button>
             </div>
 
@@ -176,7 +176,7 @@
             </div>
             <img src="" alt="">
         </div>
-        <img id="f-wave" src="../Waves/wave-3.png" alt="">
+        <img id="f-wave" src="./images/Waves/wave-3.png" alt="">
     </div>
 
 
